--- a/.github/workflows/gitLeaks.yml
+++ b/.github/workflows/gitLeaks.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
         with:
-          args: detect --source . --no-git --redact --exclude-filenames README.md
+          config: .gitleaks.toml
 
